Fix logo spacing

--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,15 @@ body {
     position:absolute;
     bottom:0;
     width:100%;
-    height:35px;
     text-align:center;
     display:none;
     z-index:999;
 }
 
 #sponsors img {
-    height:35px;
+    height:34px;
     margin:0 10px;
+    margin-bottom:-5px;
 }
 
 .content .border {
